# yaucl

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CSV2.cpp  CSV2.h  DataTraceParse.cpp  KnoBABQuery.g4  KnowledgeBaseNDP.cpp  KnowledgeBaseNDP.h  KnowledgeBaseNDPLoader.cpp  KnowledgeBaseNDPLoader.h  NDPAttributeTable.cpp  NDPAttributeTable.h  PatternMiningConfiguration.cpp  PatternMiningConfiguration.h  QueryBuilder.cpp  QueryBuilder.h  README.md  RocksDBMap.cpp  RocksDBMap.h  SecondaryMemoryMalloc.cpp  SecondaryMemoryMalloc.h  SimpleXESSerializer.cpp  Step2Mining.cpp  Step2Mining.h  antlr4_gen.sh  install_dependencies.sh  install_deps.sh  main.cpp  nesting.cpp  nesting.h
DT/: CMakeLists.txt  main.cpp
DT/include/dt/: ForTheWin.h  commons.h
DT/include/dt/structures/: DataRepo.h  find_argument.h  n_vector.h
DT/include/dt/wodt/: WODT.h
DT/src/dt/: ForTheWin.cpp
DT/src/dt/structures/: DataRepo.cpp  n_vector.cpp
benchmarking/: benchmarking.cpp
include/: SimplifiedFuzzyStringMatching.h
include/dt/: DecisionTree.h  commons.h  dt_predicate.h  parser.hpp  utils.h
include/dt/structures/: Nodes.h
include/knobab/algorithms/: ModelViewKnoBAB.h
include/knobab/algorithms/inference/: clause_inference.h
include/knobab/algorithms/mining/: DataMiningMetrics.h  GeneralToSpecificHeuristic.h  Rule.h  RulesFromFrequentItemset.h  pattern_mining.h
include/knobab/algorithms/parallelization/: CanonicalLoop.h  scheduling_types.h
include/knobab/dataStructures/: CountTableFPTree.h
include/knobab/mining/: CountTableFPTree.h  PatternMiningConfiguration.h  pattern_mining.h
include/knobab/mining/structures/: CountTableFPTree.h  fast_model_search.h
include/knobab/server/benchmarking/: LoggerInformation.h
include/knobab/server/dataStructures/: DataQuery.h  TraceData.h  atomization_structures.h  marked_event.h  oid.h
include/knobab/server/declare/: CNFDeclareDataAware.h  DeclareDataAware.h  DisjunctiveDeclareDataAware.h
include/yaucl/algorithms/: binsearch.h
include/yaucl/bpm/: DataTraceParse.h  SimpleXESSerializer.h  TracesBaseListener.h  TracesBaseVisitor.h  TracesLexer.h  TracesListener.h  TracesParser.h  TracesVisitor.h  bpm_log.h  bpm_serializers.h
include/yaucl/data/: CSV2.h  FixedSizeNDPSorter.h  MemoryMappingFile.h  SecondaryMemoryMalloc.h  VarSizeNDPSorter.h  VariadicSizeArrayElements.h  antlr4_helper.h  fwrite.h  json.h  linked_list.h  malloc_freelist.h  mmapFile.h  new_iovec.h  smart_index_pointer.h  smart_malloc.h  xml.h
include/yaucl/data/csv/: csv.h
include/yaucl/design_patterns/: Observer.h
include/yaucl/fs/: fwrite.h  mmapFile.h
include/yaucl/functional/: LexicographicalOrder.h  assert.h  iterators.h  optional_binary.h  removeIndicesFromVector.h  simplistic_view.h
include/yaucl/graphs/: DOT.g4  FLLOATProp.g4  FlexibleFA.h  FlexibleGraph.h  NodeLabelBijectionFA.h  NodeLabelBijectionGraph.h  adjacency_entry.h  adjacency_graph.h  adjacency_list_entry.h  graph_join_pm.h  graph_join_pm_algorithms.h  graph_join_pm_conversion.h  primary_memory_graph.h
include/yaucl/hashing/: evaluateHashes.h  hash_combine.h  hashing.h  pair_hash.h  umap_hash.h  uset_hash.h  vector_hash.h
include/yaucl/java/: java_classes_name.h  legacy_graph_algo_names.h
include/yaucl/learning/: DecisionTree.h  ForTheWin.h  MCL.h  dt_predicate.h
include/yaucl/memory/: index.h  memory_utils.h  new_iovec.h  smart_index_pointer.h
include/yaucl/numeric/: dovetailing.h  eigen_sparse.h  numeric_base.h  permutation.h  ssize_t.h
include/yaucl/search/: binsearch.h
include/yaucl/strings/: StringBuilder.h  serializer.h  serializers.h  string_utils.h  stringutils.h
include/yaucl/structures/: LinkedHashMultimap.h  NAryTree.h  PollMap.h  RelationalTables.h  RoaringBitmapWrapper.h  StringPrevNext.h  any_to_uint_bimap.h  bit_tagged_unions.h  default_constructors.h  eq_class.h  fixed_bimap.h  set_operations.h  set_operators.h  stack_container.h
knobabv2/: CMakeLists.txt  README.md
src/: SimplifiedFuzzyStringMatching.cpp
src/algorithms/: binsearch.cpp
src/bpm/: Traces.g  Traces.interp  TracesBaseListener.cpp  TracesBaseVisitor.cpp  TracesLexer.cpp  TracesLexer.interp  TracesLexer.tokens  TracesListener.cpp  TracesParser.cpp  TracesVisitor.cpp  bpm_log.cpp  bpm_serializers.cpp
src/data/: xml.cpp
src/dt/: DecisionTree.cpp  dt_predicate.cpp  utils.cpp
src/dt/structures/: Nodes.cpp  find_argument.cpp
src/dt/wodt/: WODT.cpp
src/examples/: decision_tree_example.cpp  decision_tree_refinement_example.cpp  mcl_example.cpp  natural_join_examples.cpp  outlook.csv
src/fs/: frwite.cpp  mmapFile.cpp
src/graphs/: adjacency_list_entry.cpp  primary_memory_graph.cpp
src/graphs/algorithms/: tarjan.cpp
src/hashing/: evaluateHashes.c  hash_combine.cpp
src/knobab/client/: client.cpp
src/knobab/dataStructures/: CountTableFPTree.cpp
src/knobab/knobab-gui-java/: pom.xml
src/knobab/mining/: CountTableFPTree.cpp  PatternMiningConfiguration.cpp  mining.cpp  pattern_mining.cpp
src/knobab/server/: server.cpp
src/knobab/tests/: CMakeLists.txt  basic_operators_testing.cpp  fuzzy_string_matching_test.cpp  group_by_test.cpp  main.cpp  prev_main.cpp  test.cpp
src/memory/: index.cpp  memory_utils.cpp  new_iovec.cpp  smart_index_pointer.cpp  smart_malloc.cpp
src/numeric/: eigen_sparse.cpp  numeric_base.cpp  permutation.cpp
src/strings/: stringutils.cpp
src/yaucl/data/: CSV2.cpp  MemoryMappingFile.cpp  SecondaryMemoryMalloc.cpp  VarSizeNDPSorter.cpp  VariadicSizeArrayElements.cpp  malloc_freelist.c  mmapFile.cpp  new_iovec.cpp  smart_index_pointer.cpp  smart_malloc.cpp
src/yaucl/graphs/: adjacency_entry.cpp  adjacency_graph.cpp  graph_join_pm.cpp  graph_join_pm_algorithms.cpp  graph_join_pm_conversion.cpp  minimizeDFA.cpp
src/yaucl/hashing/: evaluateHashes.c  hash_combine.cpp  hashing.cpp
src/yaucl/learning/: DecisionTree.cpp  ForTheWin.cpp  dt_predicate.cpp
src/yaucl/numeric/: numeric_base.cpp
src/yaucl/strings/: string_utils.cpp
src/yaucl/structures/: DoublePrevNext.cpp  NAryTree.cpp  RoaringBitmapWrapper.cpp
submodules/: csv.h
submodules/clove/: clove-unit.h
(+259 files in other folders)
